--- a/ATB/DataAccess/DataAccess.csproj
+++ b/ATB/DataAccess/DataAccess.csproj
@@ -6,4 +6,13 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="AutoMapper" Version="13.0.1" />
+      <PackageReference Include="CsvHelper" Version="31.0.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="CsvFiles\" />
+    </ItemGroup>
+
 </Project>
