Add model-level validation attributes

--- a/ATB/DataAccess/DataAccess.csproj
+++ b/ATB/DataAccess/DataAccess.csproj
@@ -13,6 +13,7 @@
 
     <ItemGroup>
       <Folder Include="CsvFiles\" />
+      <Folder Include="Validation\ValidationAttributes\" />
     </ItemGroup>
 
 </Project>
